--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.3",
-    "next": "15.3.5",
+    "next": "15.4.2-canary.7",
+    "next-auth": "5.0.0-beta.29",
     "next-theme": "^0.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5",
     "zod": "^4.0.5"
   },
   "devDependencies": {
