--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@ai-sdk/openai": "2.0.0-beta.6",
     "@ai-sdk/react": "2.0.0-beta.14",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "10.4.20",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
@@ -27,7 +30,11 @@
     "next-theme": "^0.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "postcss": "8.5.1",
+    "postgres": "^3.4.6",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.7.3",
     "use-debounce": "^10.0.5",
     "zod": "^4.0.5"
   },
@@ -37,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/bcrypt": "^5.0.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
