feat/database: add prisma and fix some deploy bugs

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "motion": "^12.23.3",
     "next": "15.3.5",
     "next-theme": "^0.1.5",
+    "prisma": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
