feat/database: init migration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "2.0.19",
     "@ai-sdk/react": "2.0.22",
     "@neondatabase/serverless": "^1.0.1",
+    "@prisma/client": "6.15.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
