--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nauverse/tailwind-dot-grid-backgrounds": "^1.2.13",
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "6.15.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-separator": "^1.1.7",
