--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.5",
-    "zod-to-json-schema": "^3.24.6"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
