--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "marked": "^16.3.0",
     "motion": "^12.23.3",
     "next": "15.3.5",
-    "next-auth": "5.0.0-beta.29",
+    "next-auth": "^5.0.0-beta.29",
     "next-theme": "^0.1.5",
     "openai-zod-to-json-schema": "^1.1.2",
     "prisma": "^6.15.0",
