--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.3.0",
     "@vercel/blob": "^2.0.0",
     "ai": "5.0.70",
     "bcryptjs": "^3.0.2",
@@ -47,6 +49,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "stripe": "^19.3.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
