--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dlx": "^0.2.1",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
+    "generate": "^0.14.0",
     "lucide-react": "^0.525.0",
     "marked": "^16.3.0",
     "motion": "^12.23.3",
@@ -45,6 +47,7 @@
     "next-auth": "^5.0.0-beta.29",
     "next-theme": "^0.1.5",
     "openai-zod-to-json-schema": "^1.1.2",
+    "pnpm": "^10.23.0",
     "prisma": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
