Add language feature
Add language feature

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vercel/blob": "^2.0.0",
     "ai": "5.0.70",
     "bcryptjs": "^3.0.2",
+    "brace-expansion": "^4.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -47,6 +48,7 @@
     "motion": "^12.23.3",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
+    "next-intl": "^4.7.0",
     "next-theme": "^0.1.5",
     "openai-zod-to-json-schema": "^1.1.2",
     "pnpm": "^10.23.0",
