Update pnpm-lock and pnpm-workspace configurations; add new dependencies and clean up i18n mappings

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,9 @@ ignoredBuiltDependencies:
   - prisma
 
 onlyBuiltDependencies:
+  - '@parcel/watcher'
   - '@prisma/client'
+  - '@swc/core'
   - '@tailwindcss/oxide'
   - esbuild
   - sharp
